--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0px;
-  z-index: 1;
+  // z-index: 4;
 }
 
 /* Logo */
@@ -59,6 +59,7 @@
 
 /* Dropdown menu */
 .navbar-wagon-dropdown-menu {
+  z-index: 1000;
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
